--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/services/ComicFactory.js"></script>
+    <script src="js/services/ListComicProvider.js"></script>
 </head>
 <body ng-controller="ComicListCtrl">
 
