--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <script src="js/filters.js"></script>
     <script src="js/services/ComicFactory.js"></script>
     <script src="js/services/ListComicProvider.js"></script>
+    <script src="js/directives/testDirective.js"></script>
 </head>
 <body ng-controller="ComicListCtrl">
 
