--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers/controllers.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/services/ComicFactory.js"></script>
     <script src="js/services/ListComicProvider.js"></script>
     <script src="js/directives/testDirective.js"></script>
 </head>
-<body ng-controller="ComicListCtrl">
+<body >
 
 <div ng-view></div>
 
