--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,12 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/controllers.js"></script>
+    <script src="js/TryThisDirective/tryThisController.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/services/ComicFactory.js"></script>
     <script src="js/services/ListComicProvider.js"></script>
-    <script src="js/directives/testDirective.js"></script>
+    <!--<script src="js/directives/testDirective.js"></script>-->
+    <script src="js/TryThisDirective/tryThisDirective.js"></script>
 </head>
 <body >
 
