added more images and expanded directive

--- a/app/js/TestDirective/testDirective.html
+++ b/app/js/TestDirective/testDirective.html
@@ -1,3 +1,8 @@
+<ul class="specs">
+<li>
+<span>Test Directive</span>
+</li>
+</ul>
 <div ng-controller="SomeDetailCtrl as comList">
     <div>
         <img ng-src="{{comList.mainImageUrl}}" style="max-width: 400px;max-height: 400px">
