--- a/app/js/TryThisDirective/tryThisDirective.html
+++ b/app/js/TryThisDirective/tryThisDirective.html
@@ -1,3 +1,8 @@
+<!--<ul class="specs">-->
+    <!--<li>-->
+        <!--<span>Try This Directive</span>-->
+    <!--</li>-->
+<!--</ul>-->
 <div ng-controller="TryThisCtrl as comList">
     <div>
         <img ng-src="{{comList.mainImageUrl}}" style="max-width: 400px;max-height: 400px">
