got the return to work

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <script src="js/services/ListComicProvider.js"></script>
     <script src="js/PageExpanded/ServiceDetailExpanded.js"></script>
     <script src="js/TryThisDirective/tryThisService.js"></script>
+    <script src="js/TryThisDirective/tryThisServiceGetJason.js"></script>
     <script src="js/TestDirective/testDirective.js"></script>
     <script src="js/TryThisDirective/tryThisDirective.js"></script>
 </head>
