Added a setup page

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <script src="js/TryThisDirective/tryThisServiceGetJason.js"></script>
     <script src="js/TestDirective/testDirective.js"></script>
     <script src="js/TryThisDirective/tryThisDirective.js"></script>
+    <script src="js/SetupDirective/comicSetupController.js"></script>
 </head>
 <body >
 
