--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/TestDirective/ControllerSomeDetail.js"></script>
