--- a/app/js/SetupDirective/comic-setup.html
+++ b/app/js/SetupDirective/comic-setup.html
@@ -15,39 +15,58 @@
                     ng-options="comic.ComicName for comic in theseComics">
             </select>
             <label class="control-label col-sm-1" for="inputComicCode"> </label>
-            <input class="col-sm-3" type="text" id="inputComicCode" value="{{selectedFormattedComics.ComicName}}">
+            <!--<input class="col-sm-3" type="text" id="inputComicCode" value="{{selectedFormattedComics.ComicName}}">-->
+            <select class="col-sm-3" id="FormattedComicName" name="FormattedComicName" ng-model="selectedFormattedComics"
+                    ng-options="comic2.ComicName for comic2 in formattedComics">
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputOneOfMine">One of Mine: </label>
             <input class="col-sm-3" type="text" id="inputOneOfMine" value="{{selectedComic.OneOfMyComics}}">
+            <label class="control-label col-sm-1" for="inputOneOfMine2"> </label>
+            <input class="col-sm-3" type="text" id="inputOneOfMine2" value="{{FormattedOneOfMine}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputPriority">Priority: </label>
             <input class="col-sm-3" type="text" id="inputPriority" value="{{selectedComic.priority}}">
+            <label class="control-label col-sm-1" for="inputPriority2"> </label>
+            <input class="col-sm-3" type="text" id="inputPriority2" value="{{FormattedPriority}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputDaysAvailable">DaysAvailable: </label>
             <input class="col-sm-3" type="text" id="inputDaysAvailable" value="{{selectedComic.DaysAvailable}}">
+            <label class="control-label col-sm-1" for="inputDaysAvailable2"> </label>
+            <input class="col-sm-3" type="text" id="inputDaysAvailable2" value="{{FormattedDaysAvailable}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputDescription">Description: </label>
             <input class="col-sm-3" type="text" id="inputDescription" value="{{selectedComic.description}}">
+            <label class="control-label col-sm-1" for="inputDescription2"> </label>
+            <input class="col-sm-3" type="text" id="inputDescription2" value="{{FormattedDescription}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputComicName">Comic Code: </label>
             <input class="col-sm-3" type="text" id="inputComicCode" value="{{selectedComic.ComicCode}}">
+            <label class="control-label col-sm-1" for="inputComicName2"> </label>
+            <input class="col-sm-3" type="text" id="inputComicName2" value="{{FormattedComicImgCode}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputImageCode">Image Code: </label>
             <input class="col-sm-3" type="text" id="inputImageCode" value="{{selectedComic.imgCode}}">
+            <label class="control-label col-sm-1" for="inputImageCode2"> </label>
+            <input class="col-sm-3" type="text" id="inputImageCode2" value="{{FormattedImageCode}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputDomain">Domain: </label>
             <input class="col-sm-3" type="text" id="inputDomain" value="{{selectedComic.Domain}}">
+            <label class="control-label col-sm-1" for="inputDomain2"> </label>
+            <input class="col-sm-3" type="text" id="inputDomain2" value="{{FormattedDomain}}">
         </div>
         <div class="form-group">
             <label class="control-label col-sm-3" for="inputImageDirectory">Image Directory: </label>
             <input class="col-sm-3" type="text" id="inputImageDirectory" value="{{selectedComic.imgDirectoryLocation}}">
+            <label class="control-label col-sm-1" for="inputImageDirectory2"> </label>
+            <input class="col-sm-3" type="text" id="inputImageDirectory2" value="{{FormattedImageDirectory}}">
         </div>
         <div class="form-group">
             <span class="col-sm-3"> </span>
