--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,9 @@
     <script src="js/TestDirective/testDirective.js"></script>
     <script src="js/TryThisDirective/tryThisDirective.js"></script>
     <script src="js/SetupDirective/comicSetupController.js"></script>
+    <!--<script src="js/SetupDirective/comicSetupUpdateService.js"></script>-->
+    <script src = "js/DemoOfPost/comicDemoController.js"></script>
+    <script src = "js/DemoOfPost/comicPostDemoService.js"></script>
 </head>
 <body >
 
